--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">MyTimeTodo</string>
+    <string name="app_name">My Todo</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="other_works">Other Works</string>
     <string name="daily_routine">Daily Routine</string>
-    <string name="input_text_hint">Right your work here...</string>
+    <string name="input_text_hint">Right your work here…</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
 </resources>
