--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="input_text_hint">Right your work here…</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
+    <string name="today_work">Today\'s work</string>
 </resources>
