--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
     <string name="today_work">Today\'s work</string>
+    <string name="empty">Empty!</string>
 </resources>
