--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="other_works">Other Works</string>
     <string name="daily_routine">Daily Routine</string>
-    <string name="input_text_hint">Right your work here…</string>
+    <string name="input_text_hint">Write your work here…</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
     <string name="today_work">Today\'s work</string>
@@ -12,4 +12,5 @@
     <string name="body">body</string>
     <string name="time">time</string>
     <string name="title">title</string>
+    <string name="work_title">Work Title…</string>
 </resources>
