--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="edit_icon">Edit icon</string>
     <string name="delete_icon">Delete icon</string>
     <string name="check_icon">Check icon</string>
+    <string name="finished_works">Finished works: </string>
 </resources>
