--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">My Todo</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="other_works">Other Works</string>
     <string name="daily_routine">Daily Routine</string>
@@ -17,4 +16,6 @@
     <string name="delete_icon">Delete icon</string>
     <string name="check_icon">Check icon</string>
     <string name="finished_works">Finished works</string>
+    <string name="sort_by_color">Sort by color</string>
+    <string name="delete_all_works">Delete all works</string>
 </resources>
